--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2205, 299)\n",
-      "Exercise Transform Data(Tuple) Count: 2205\n"
+      "Raw Data Count(Exercises, Days): (2212, 300)\n",
+      "Exercise Transform Data(Tuple) Count: 2212\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 299\n"
+      "Exercise Days: 300\n"
      ]
     }
    ],
@@ -200,13 +200,13 @@
      "text": [
       "('Arnold Press[Dumbbell]', 23)\n",
       "('Assisted Dips[Machine]', 51)\n",
-      "('Assisted Pull-Up[Machine]', 64)\n",
+      "('Assisted Pull-Up[Machine]', 65)\n",
       "('Back Extension', 41)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 5)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 13)\n",
-      "('Bent Over Row[Dumbbell]', 17)\n",
+      "('Bent Over Row[Barbell]', 14)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Biceps Curls[Barbell]', 1)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
       "('Biceps Curls[EZ Curl Bar]', 1)\n",
@@ -253,9 +253,9 @@
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 107)\n",
+      "('Lat Pulldown[Machine]', 108)\n",
       "('Leg Extension[Machine]', 63)\n",
-      "('Long Pull Row[Cable]', 69)\n",
+      "('Long Pull Row[Cable]', 70)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 121)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -278,7 +278,7 @@
       "('Seated Chest Press[Machine]', 90)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 77)\n",
+      "('Seated Row[Machine]', 78)\n",
       "('Shoulder Press[Machine]', 85)\n",
       "('Side Lateral Raise[Dumbbell]', 72)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
@@ -289,7 +289,7 @@
       "('Split Squat[Smith Machine]', 12)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 50)\n",
+      "('Straight Arm Pulldown[Cable]', 51)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
@@ -335,22 +335,22 @@
      "output_type": "stream",
      "text": [
       "('Lying Leg Curls[Machine]', 121)\n",
-      "('Lat Pulldown[Machine]', 107)\n",
+      "('Lat Pulldown[Machine]', 108)\n",
       "('Plank', 104)\n",
       "('Deadlift[Barbell]', 94)\n",
       "('Seated Chest Press[Machine]', 90)\n",
-      "('Shoulder Press[Machine]', 85)\n",
       "('Hip Abduction[Machine]', 85)\n",
+      "('Shoulder Press[Machine]', 85)\n",
       "('Hip Adduction[Machine]', 81)\n",
-      "('Seated Row[Machine]', 77)\n",
+      "('Seated Row[Machine]', 78)\n",
       "('Side Lateral Raise[Dumbbell]', 72)\n",
-      "('Long Pull Row[Cable]', 69)\n",
+      "('Long Pull Row[Cable]', 70)\n",
       "('Flat Bench Press[Barbell]', 65)\n",
-      "('Assisted Pull-Up[Machine]', 64)\n",
+      "('Assisted Pull-Up[Machine]', 65)\n",
       "('Leg Extension[Machine]', 63)\n",
       "('Power Leg Press[Machine]', 62)\n",
       "('Assisted Dips[Machine]', 51)\n",
-      "('Straight Arm Pulldown[Cable]', 50)\n",
+      "('Straight Arm Pulldown[Cable]', 51)\n",
       "('Chest Fly[Pec Deck Machine]', 49)\n",
       "('Running', 47)\n",
       "('Back Extension', 41)\n",
@@ -358,91 +358,91 @@
       "('Incline Bench Press[Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
-      "('Incline Bench Press[Barbell]', 26)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Incline Bench Press[Barbell]', 26)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 25)\n",
       "('Incline Bench Press[Dumbbell]', 24)\n",
       "('Arnold Press[Dumbbell]', 23)\n",
       "('Wrist Roller', 22)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Dips', 18)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Bent Over Row[Dumbbell]', 17)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
+      "('Bent Over Row[Barbell]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
       "('Upright Row[EZ Curl Bar]', 13)\n",
-      "('Bent Over Row[Barbell]', 13)\n",
       "('Military Press[Smith Machine]', 13)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
       "('Split Squat[Smith Machine]', 12)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Push-Up', 11)\n",
-      "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Body-Weight Squat', 5)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Hip Thrust', 5)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Behind The Neck Press[Smith Machine]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Full Squat[Barbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
       "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Walking', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Trx Lunge', 1)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Trx Suspended Lunge', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
       "('Biceps Curls[Barbell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n"
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n"
      ]
     }
    ],
